[gd_scene load_steps=5 format=2]

[ext_resource path="res://asserts/art/window.png" type="Texture" id=1]
[ext_resource path="res://asserts/art/Paper.png" type="Texture" id=2]
[ext_resource path="res://asserts/art/Button.png" type="Texture" id=3]
[ext_resource path="res://DialogScene.gd" type="Script" id=4]

[node name="Dialog" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -432.0
margin_top = -270.0
margin_right = 432.0
margin_bottom = 270.0
texture = ExtResource( 1 )

[node name="DialogIcon" type="TextureRect" parent="TextureRect"]
margin_left = 16.0
margin_top = 123.0
margin_right = 268.0
margin_bottom = 429.0
texture = ExtResource( 2 )

[node name="DialogTitle" type="Label" parent="TextureRect"]
margin_left = 552.0
margin_top = 78.0
margin_right = 608.0
margin_bottom = 92.0

[node name="DialogText" type="RichTextLabel" parent="TextureRect"]
margin_left = 400.0
margin_top = 158.0
margin_right = 768.0
margin_bottom = 374.0

[node name="Button" type="TextureButton" parent="TextureRect"]
margin_left = 512.0
margin_top = 398.0
margin_right = 648.0
margin_bottom = 526.0
texture_normal = ExtResource( 3 )
expand = true

[node name="ButtonText" type="Label" parent="TextureRect/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -16.0
margin_right = 36.0
margin_bottom = 7.0
